@@ -1,3 +1,3 @@
-EBUILD simpleviewer-gl-9999.ebuild 762 RMD160 a3de60741fc92237becbe85570eba84e146cd759 SHA1 91963d3a04cc2a0ea89b463412b9e3de0e110680 SHA256 ff7874a7ae125f187a1abfa96ad0d4181aea7a4d0639d669e764fd00f7609249
-MISC ChangeLog 269 RMD160 eaec6d2fa9f6f9fcb5556563012ac5811de8fd7d SHA1 1e199890cf91cfc5d02b333e49ee0240d88d3356 SHA256 14bb8c1a1081eddffb5f1fcee7466f5f0f993a599ffa8415498ebb9150592a24
+EBUILD simpleviewer-gl-9999.ebuild 787 RMD160 82487e2134037518683b928e650ec61523eb67f0 SHA1 e5465f9dcddccc3c49428d54928b885be461b54d SHA256 73f93c951b96fe597916b8313405553eacbc09db933d2a51bd780ec51bd4c917
+MISC ChangeLog 361 RMD160 694f4146af3e7005ecf6716c8e70e3ca29e4f4e7 SHA1 c4716a8125d1256d91866f112670dce9403c2dec SHA256 c85afcd827990ca8d5999387715e6403e7d704751a3a12d8706d38a84903ed67
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
